# RustQR

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: benchmark.yml  ci.yml  criterion-benchmark.yml  fast-benchmark.yml
artifacts/phase9_validation/: brightness.json
benches/: binarization.rs  common.rs  grayscale.rs  memory_pool.rs  qr_detect.rs  real_qr_cc.rs  real_qr_images.rs
benches/images/: README.md  monitor
docs/: PGO_GUIDE.md  changelog.md  decoder_status.md  failure_cluster_report_sample.json  failure_cluster_report_sample.md  failure_cluster_triage.md  optimize.md  phase6_tuned_profile.env  reading_rate_improvement.md  spec.md
docs/worklog/: phase7_01_soft_decision_rs.txt  phase7_02_uncertain_module_beam_repair.txt  phase7_03_two_finder_timing_fallback.txt  phase7_04_quiet_zone_reconstruction.txt  phase7_05_piecewise_mesh_warp.txt  phase7_06_radial_distortion_compensation.txt  phase7_07_confidence_budget_manager.txt  phase7_08_failure_cluster_triage.txt  phase8_01_region_first_multi_qr_pipeline.txt  phase8_02_rotation_specialized_deskew.txt  phase8_03_high_version_precision_mode.txt  phase8_05_category_aware_router.txt  (+13 more)
examples/: legacy_corner_decode.rs  legacy_debug_decode.rs  legacy_debug_detect.rs  legacy_minimal_test.rs  legacy_reading_rate.rs  legacy_simple_test.rs  legacy_test_improved.rs
scripts/: compare_reading_rate_artifacts.py  failure_signature_tuning_report.py  triage_failure_clusters.py  tune_phase6_thresholds.py
src/: debug.rs  lib.rs  pipeline.rs
tests/: decode_regression_tests.rs
(+61 files in other folders)
