[package]
name = "rust_qr"
version = "0.1.0"
edition = "2024"
authors = ["Rizwan <rizwan@example.com>"]
description = "World's fastest QR code scanning library in pure Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rizwankce/RustQR"
keywords = ["qr", "qrcode", "barcode", "scanning", "vision"]
categories = ["computer-vision", "no-std"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.24"

[[bench]]
name = "qr_detect"
harness = false

[[bench]]
name = "real_qr_images"
harness = false
